--- a/docker/images/cerberus-as-tomcat-keycloak/latest/Dockerfile
+++ b/docker/images/cerberus-as-tomcat-keycloak/latest/Dockerfile
@@ -6,27 +6,27 @@ ENV KEYCLOACK_REALM Cerberus
 ENV KEYCLOACK_CLIENT cerberus
 ENV KEYCLOACK_URL http://192.168.1.1:8080/auth
 ENV CATALINA_OPTS="-Dorg.cerberus.environment=prd -Dorg.cerberus.authentification=keycloak -Xmx1024m"
-ENV KEYCLOACK_VERSION 8.0.2
+ENV KEYCLOACK_VERSION 18.0.1
 ENV KEYCLOACK_TOMCAT8_ADAPTER_NAME keycloak-tomcat-adapter-dist-${KEYCLOACK_VERSION}
 
 ENV DATABASE_HOST cerberus-db-mysql
 ENV DATABASE_PORT 3306
 ENV DATABASE_NAME cerberus
 ENV DATABASE_USER cerberus
-ENV DATABASE_PASSWORD toto
+ENV DATABASE_PASSWORD cerberus
 
 ARG CERBERUS_NAME=Cerberus
 ARG CERBERUS_VERSION=4.14
 ARG CERBERUS_PACKAGE_NAME=${CERBERUS_NAME}-${CERBERUS_VERSION}
 
-ARG MYSQL_JAVA_CONNECTOR_VERSION=5.1.47
+ARG MYSQL_JAVA_CONNECTOR_VERSION=8.0.28
 ARG MYSQL_JAVA_CONNECTOR_NAME=mysql-connector-java-${MYSQL_JAVA_CONNECTOR_VERSION}
 
 # Download and install MySQL JDBC Drivers
 RUN echo "Download & install MySQL JDBC Drivers" && \
     wget -P /tmp/ https://downloads.mysql.com/archives/get/p/3/file/${MYSQL_JAVA_CONNECTOR_NAME}.zip && \
     unzip -q -d /tmp/ /tmp/${MYSQL_JAVA_CONNECTOR_NAME}.zip && \
-    mv /tmp/${MYSQL_JAVA_CONNECTOR_NAME}/${MYSQL_JAVA_CONNECTOR_NAME}-bin.jar  /usr/local/tomcat/lib/ && \
+    mv /tmp/${MYSQL_JAVA_CONNECTOR_NAME}/${MYSQL_JAVA_CONNECTOR_NAME}.jar  /usr/local/tomcat/lib/ && \
     echo "Clean temp directory" && \
     rm /tmp/* -rf
 #COPY mysql-connector-java-5.1.20-bin.jar /usr/local/tomcat/lib/
@@ -35,8 +35,8 @@ RUN echo "Download & install MySQL JDBC Drivers" && \
 #RUN ls -al /usr/local/tomcat/lib/
 
 # Download & install KeyCloak adapter to manage authentification with Tomcat
-RUN wget -P /tmp/ https://downloads.jboss.org/keycloak/${KEYCLOACK_VERSION}/adapters/keycloak-oidc/${KEYCLOACK_TOMCAT8_ADAPTER_NAME}.zip && \
-    unzip -q -d /usr/local/tomcat/lib/ /tmp/${KEYCLOACK_TOMCAT8_ADAPTER_NAME}.zip && \
+RUN wget -P /tmp/ https://github.com/keycloak/keycloak/releases/download/18.0.1/keycloak-oidc-tomcat-adapter-18.0.1.zip && \
+    unzip -q -d /usr/local/tomcat/lib/ /tmp/keycloak-oidc-tomcat-adapter-18.0.1.zip && \
     echo "Clean temp directory" && \
     rm /tmp/* -rf
 #COPY ${KEYCLOACK_TOMCAT8_ADAPTER_NAME}.zip /tmp/
